fix pre wrap

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ li:last-child {
 	text-transform: none;
 	font-style: normal;
 	margin-bottom: 82px;
-	white-space: pre;
+	white-space: pre-wrap;
 	display: flex;
 	flex-flow: column;
 }
